--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,16 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.android.gms:play-services-ads:9.0.0'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.github.markushi:circlebutton:1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
 
+    // for notifications
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.parse:parse-android:1.+'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 }
+// for notifications
+apply plugin: 'com.google.gms.google-services'
